* SearchEngine: support only FTI queries (TrivialDev)
* Search: index project tags and use them for search (Roland Mas)
* Search: provide language-specific settings for better indexation/search (Roland Mas)
* Site Admin: add paging system in userlist page [#799] (TrivialDev)
* Site Admin: support widgets for forge home page (TrivialDev)
* Soap: getArtifacts tracker function: support changed_from parameter (TrivialDev)
* Soap: getFlattedArtifacts function: to return as CSV export. All data in 1 call (TrivialDev)
* Spellcheck (Anders Jonsson)
* Taskboard: support multiple taskboards per project [#785] (TrivialDev)
* Taskboard: support filtering tasks [#786] (TrivialDev)
* Tracker: keep values in artifact new submit form on error. (TrivialDev)
* Tracker: add new option on customfield text: regex pattern validation (TrivialDev)
* Tracker: add new customfield: User (TrivialDev)
* Tracker: add new customfield: DateTime (TrivialDev)
* Tracker: add new customfield: Release (TrivialDev)
* Tracker: add support for mandatory fields on workflow of artifact (TrivialDev)
* Tracker: add support for description on customfield to be used in tooltip (TrivialDev)
* Tracker: fix customfield cloning when not using default template fusionforge project [#829] (TrivialDev)
* Tracker: add support for autoassign [#151] & [#149] (TrivialDev)
* Tracker: add default value support for extrafields (TrivialDev)
* Tracker: CSV export, support lastModifiedDate filtering (TrivialDev)
* Tracker: CSV export, add comments [#853] (Dassault Aviation)
* Tracker: add new customfield: Effort (TrivialDev)
* Tracker: new widget oriented display to replace the old "2 columns" view. (TrivialDev)
* Tracker: support Markdown syntax in artifact detailled description and comments (TrivialDev)
* Utils: cross ref document/release. Use [DNNN]/[RNNN] where NNN is the ID of the document/frs release. (TrivialDev)
* Web UI: upgrade splitter jquery plugin to 0.20.0 (TrivialDev)