@@ -3,7 +3,7 @@
  * Code Snippets Repository
  *
  * Copyright 1999-2001 (c) VA Linux Systems
- * Copyright 2013, Franck Villaume - TrivialDev
+ * Copyright 2013,2017, Franck Villaume - TrivialDev
  * http://fusionforge.org
  *
  * This file is part of FusionForge. FusionForge is free software;
@@ -52,7 +52,7 @@ snippet_header(array('title'=>_('Snippet Library')));
 
 $by = getStringFromRequest('by');
 
-$qpa = db_construct_qpa(array(), 'SELECT users.realname,users.user_name,snippet.description,snippet.snippet_id,snippet.name FROM snippet,users WHERE users.user_id=snippet.created_by ') ;
+$qpa = db_construct_qpa(array(), 'SELECT users.realname,users.user_name, users.user_id, snippet.description,snippet.snippet_id,snippet.name FROM snippet,users WHERE users.user_id=snippet.created_by ') ;
 $qpa2 = db_construct_qpa(array(), 'SELECT users.realname,users.user_name,users.user_id,snippet_package.description,snippet_package.snippet_package_id,snippet_package.name FROM snippet_package,users WHERE users.user_id=snippet_package.created_by ') ;
 
 if ($by=='lang') {
@@ -83,7 +83,7 @@ if ((!$result || $rows < 1) && (!$result2 || $rows2 < 1)) {
 } else {
 
 	$title_arr=array();
-	$title_arr[]= _('Snippet ID');
+	$title_arr[]= _('ID');
 	$title_arr[]= _('Title');
 	$title_arr[]= _('Creator');
 
@@ -92,33 +92,53 @@ if ((!$result || $rows < 1) && (!$result2 || $rows2 < 1)) {
 	//	List packages if there are any
 	if ($rows2 > 0) {
 		echo '
-			<tr class="tableheading"><td colspan="3">' ._('Packages Of Snippets').'<td>';
+			<tr class="tableheading"><td colspan="3">' ._('Packages Of Snippets').'</td></tr>';
 	}
 	for ($i=0; $i<$rows2; $i++) {
 		echo '
 			<tr><td rowspan="2">'.
-			util_make_link ('/snippet/detail.php?type=package&id='.db_result($result2,$i,'snippet_package_id'),'<strong>'.db_result($result2,$i,'snippet_package_id').'</strong>').'</td><td><strong>'.
-			db_result($result2,$i,'name').'</td><td>'.
-			util_make_link_u (db_result($result2, $i, 'user_name'), db_result($result2, $i, 'user_id'), db_result($result2, $i, 'realname')).'</td></tr>';
+			util_make_link('/snippet/detail.php?type=package&id='.db_result($result2,$i,'snippet_package_id'),'<strong>'.db_result($result2,$i,'snippet_package_id').'</strong>').'</td><td>'.
+			util_make_link('/snippet/detail.php?type=package&id='.db_result($result2,$i,'snippet_package_id'), '<strong>'.db_result($result2,$i,'name').'</strong>').'</td><td>'.
+			util_display_user(db_result($result2, $i, 'user_name'), db_result($result2, $i, 'user_id'), db_result($result2, $i, 'realname')).'</td></tr>';
+			$parsertype = forge_get_config('snippet_parser_type');
+			switch ($parsertype) {
+			case 'markdown':
+				require_once 'markdown.php';
+				$result_html = Markdown(db_result($result2 ,$i ,'description'));
+				break;
+			default:
+				$result_html = util_make_links(nl2br(db_result($result2, $i ,'description')));
+			}
+
 		echo '
-			<tr><td colspan="2">'.util_make_links(nl2br(db_result($result2,$i,'description'))).'</td></tr>';
+			<tr><td colspan="2">'.$result_html.'</td></tr>';
 	}
 
 	//	List snippets if there are any
 	if ($rows > 0) {
 		echo '
-			<tr class="tableheading"><td colspan="3">' ._('Snippets').'</td>';
+			<tr class="tableheading"><td colspan="3">' ._('Snippets').'</td></tr>';
 	}
 	for ($i=0; $i<$rows; $i++) {
 		echo '
 			<tr><td rowspan="2">'.
-			util_make_link ('/snippet/detail.php?type=snippet&id='.db_result($result,$i,'snippet_id'),'<strong>'.db_result($result,$i,'snippet_id').'</strong>').
-			'</td><td><strong>'.
-			util_make_link ('/snippet/detail.php?type=snippet&id='.db_result($result,$i,'snippet_id'),db_result($result,$i,'name')).
-			'</strong></td><td>'.
-			util_make_link_u (db_result($result, $i, 'user_name'), db_result($result, $i, 'user_id'), db_result($result, $i, 'realname')).'</td></tr>';
+			util_make_link('/snippet/detail.php?type=snippet&id='.db_result($result,$i,'snippet_id'),'<strong>'.db_result($result,$i,'snippet_id').'</strong>').
+			'</td><td>'.
+			util_make_link('/snippet/detail.php?type=snippet&id='.db_result($result,$i,'snippet_id'),'<strong>'.db_result($result,$i,'name').'</strong>').
+			'</td><td>'.
+			util_display_user(db_result($result, $i, 'user_name'), db_result($result, $i, 'user_id'), db_result($result, $i, 'realname')).'</td></tr>';
+			$parsertype = forge_get_config('snippet_parser_type');
+			switch ($parsertype) {
+			case 'markdown':
+				require_once 'markdown.php';
+				$result_html = Markdown(db_result($result ,$i ,'description'));
+				break;
+			default:
+				$result_html = util_make_links(nl2br(db_result($result, $i ,'description')));
+			}
+
 		echo '
-			<tr><td colspan="2">'.util_make_links(nl2br(db_result($result,$i,'description'))).'</td></tr>';
+			<tr><td colspan="2">'.$result_html.'</td></tr>';
 	}
 	echo $HTML->listTableBottom();
 }
